--- a/GaapMcp.Server/GaapMcp.Server.csproj
+++ b/GaapMcp.Server/GaapMcp.Server.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.4.*" />
-    <PackageReference Include="ModelContextProtocol" Version="0.4.1-preview.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
+    <PackageReference Include="ModelContextProtocolServer.Sse" Version="0.6.0" />
   </ItemGroup>
 
 </Project>
